# DroneRecognition

./: CMakeLists.txt
Dependencies/OpenCV/lib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_aruco490.lib  opencv_aruco490d.lib  opencv_bgsegm490.lib  opencv_bgsegm490d.lib  opencv_bioinspired490.lib  opencv_bioinspired490d.lib  opencv_calib3d490d.lib  opencv_ccalib490.lib  opencv_ccalib490d.lib  opencv_core490d.lib  opencv_datasets490.lib  opencv_datasets490d.lib  opencv_dnn490d.lib  opencv_dnn_objdetect490.lib  opencv_dnn_objdetect490d.lib  opencv_dnn_superres490.lib  opencv_dnn_superres490d.lib  opencv_dpm490.lib  opencv_dpm490d.lib  opencv_face490.lib  opencv_face490d.lib  opencv_features2d490d.lib  opencv_flann490d.lib  opencv_fuzzy490.lib  opencv_fuzzy490d.lib  opencv_gapi490d.lib  opencv_hfs490.lib  opencv_hfs490d.lib  opencv_highgui490d.lib  opencv_img_hash490.lib  opencv_img_hash490d.lib  opencv_imgcodecs490d.lib  opencv_imgproc490d.lib  opencv_intensity_transform490.lib  opencv_intensity_transform490d.lib  opencv_line_descriptor490.lib  (+53 more)
headers/: Benchmark.h  ContourFinder.h  Deflickerer.h  DroneRecognition.h  ThreeFrameAX.h  ThreeFrameDetector.h  ThreeFrameOO.h  TwoFrameMaskDetector.h
src/: Benchmark.cpp  ContourFinder.cpp  Deflickerer.cpp  DroneRecognition.cpp  ThreeFrameAX.cpp  ThreeFrameDetector.cpp  ThreeFrameOO.cpp  TwoFrameMaskDetector.cpp
